stubbed out first pass through training and updated swagger
